--- a/templates/ask/login_content.html
+++ b/templates/ask/login_content.html
@@ -7,19 +7,21 @@
 <div class="row">
 	<p id="createAccount" class="text-danger"> Sorry, wrong password!</p>
 </div>
-<form class="form-horizontal">
-	<div class="form-group">
-		<label class="col-sm-2 control-label">Login</label>
+<form class="form-horizontal" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+	<!-- <div class="form-group">
+		<label class="col-sm-2 control-label" for="login">Login </label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" placeholder="Enyer your login here">
+			<input class="form-control" placeholder="Enyer your login here" type="text" name="login" maxlength="100" required />
 		</div>
 	</div>
 	<div class="form-group">
-		<label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+		<label for="password" class="col-sm-2 control-label">Password</label>
 		<div class="col-sm-10">
-			<input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+			<input type="password" class="form-control" id="inputPassword3" placeholder="Password" name="password" maxlength="100" required />
 		</div>
-	</div>
+	</div> -->
 	<div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
 			<button type="submit" class="btn btn-warning"> Log In! </button>
