--- a/templates/ask/question_content.html
+++ b/templates/ask/question_content.html
@@ -10,7 +10,7 @@
 		<div class="col-lg-8">
 			<div class="row">
 				<div class="col-lg-12 center-block">
-					<h3><a href="#">{{question.title}}</a></h3>
+					<h3><a href="{% url 'question' question.id %}">{{question.title}}</a></h3>
 				</div>
 			</div>
 			<div class="row">
@@ -29,15 +29,15 @@
 		</div>
 		<div class="col-lg-8">
 			<b>Tags:</b>
-			{% for t in question.tags %}
-			<a href="#">#{{t}}</a>
+			{% for t in question.tags.all %}
+			<a href="{% url 'tag' t.name %}">#{{t.name}}</a>
 			{% endfor %}
 		</div>
 	</div>
 </div>
 
 
-{% for q in questions %}
+{% for a in answer %}
 <div class="panel panel-default">
 	<div class="row">
 		<div class="col-lg-3" style="padding-top: 10px;">
@@ -47,12 +47,12 @@
 		<div class="col-lg-8">
 			<div class="row">
 				<div class="col-lg-12 center-block">
-					<h3><a href="{% url 'hello' %}">{{q.title}}</a></h3>
+					<h3><a href="{% url 'hello' %}">{{a.title}} </a></h3>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-12 center-block">
-					<h4><p>{{q.text}}</p></h4>
+					<h4><p>{{a.text}}</p></h4>
 				</div>
 			</div>
 		</div>
@@ -81,10 +81,10 @@
 	<div class="col-sm-12">
 		<textarea class="form-control" rows="5" placeholder="Type your answer..."></textarea>
 	</div>
-</div>	
+</div>
 <div class="form-group">
 	<div id="tagForma" class=" col-sm-12">
 		<button type="submit" class="btn btn-warning"> Answer! </button>
 	</div>
-</div>  	
+</div>
 {% endblock content %}
