--- a/templates/ask/tag_content.html
+++ b/templates/ask/tag_content.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="row" style="padding-left: 15px;">
-	<h2 id="header"> Tag:{{tagName|default:"Moon"}}</h2>
+	<h2 id="header"> Tag:{{tag_name|default:"Moon"}}</h2>
 </div>
 
 {% for q in questions %}
@@ -15,12 +15,12 @@
 		<div class="col-lg-8">
 			<div class="row">
 				<div class="col-lg-12 center-block">
-					<h3><a href="/ask/question/1/">{{q.1.title}}</a></h3>
+					<h3><a href="{%url 'question' q.id %}">{{q.title}}</a></h3>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-12 center-block">
-					<h4><p>{{q.1.text}}</p></h4>
+					<h4><p>{{q.text}}</p></h4>
 				</div>
 			</div>
 		</div>
@@ -33,10 +33,10 @@
 			<button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-plus"></span></button>
 		</div>
 		<div class="col-lg-8">
-			<a href="/ask/question/1/">Answers({{q.1.id}})</a>
+			<a href="{%url 'question' q.id %}"> Answers({{q.id}})</a>
 			Tags: 
-			{% for t in q.1.tags %}
-			<a href="/ask/tag/asd/">#{{t}}</a>
+			{% for t in q.tags.all %}
+			<a href="{%url 'tag' t.name %}">#{{t.name}}</a>
 			{% endfor %}
 		</div>
 	</div>
