--- a/templates/ask/right_colum.html
+++ b/templates/ask/right_colum.html
@@ -4,19 +4,20 @@
 			<div class="col-lg-12">
 				<h2 id="header" >Popular Tags</h2>
 				<ul id="list" class="list-inline">
-					<li class="medium_text">Vasia</li>
-					<li class="small_text">Ser123</li>
-					<li class="big_text">Boris</li>
+{#                    <li class="medium_text"><a href="#">Vasia</a></li>#}
+                    <li><a href="#">Vasia</a></li>
+                    <li class="small_text"><a href="#">Ser123</a></li>
+                    <li class="big_text"><a href="#">Boris</a></li>
 				</ul>
 				<ul id="list" class="list-inline">
-					<li class="small_text">Petro</li>
-					<li class="big_text">Li007</li>
-					<li class="medium_text">Zare</li>
+                    <li class="small_text"><a href="#">Petro</a></li>
+                    <li class="big_text"><a href="#">Li007<</a>/li>
+                    <li class="medium_text"><a href="#">Zare</a></li>
 				</ul>
 				<ul id="list" class="list-inline">
-					<li class="big_text">Same</li>
-					<li class="medium_text">Ak47</li>
-					<li class="small_text">LoL</li>
+                    <li class="big_text"><a href="#">Same</a></li>
+                    <li class="medium_text"><a href="#">Ak47</a></li>
+                    <li class="small_text"><a href="#">LoL</a></li>
 				</ul>
 			</div>
 			<div class="col-lg-12">
