--- a/templates/base.html
+++ b/templates/base.html
@@ -1,72 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bootstrap 101 Template</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
 
-	<!-- Bootstrap -->
-	<link href="/bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
-	<link href="/bootstrap-3.3.2-dist/css/style.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
+    <!-- Bootstrap -->
+    <link href="/bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
+    <link href="/bootstrap-3.3.2-dist/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
 
 </head>
 <body>
-	{% block  navbar %}
-	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<a class=" label_ask" href="{%url 'hot'%}">Ask-Ask</a>
-			</div>
-			<div class="collapse navbar-collapse">
-				<form class="navbar-form navbar-left search-form" role="form">
-					<div class="form-group">
-						<input type="text" id = "search" placeholder="Search..." class="form-control input-sm" >
-					</div>
-					<button type="submit" class="btn btn-warning btn-sm">Search</button>
-				</form>         
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="{%url 'login'%}">LogIn</a></li>
-					<li><a href="#">SingUp</a></li>
-				</ul>
-				<img src="/image/face.png" class="img-rounded navbar-right" alt="Cinque Terre" width="50" height="50"> 
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">UserName</a></li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div>
-	</div>
-	{% endblock %}
+{% block  navbar %}
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class=" label_ask" href="{% url 'hot' %}">Ask-Ask</a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <form class="navbar-form navbar-left search-form" role="form">
+                    <div class="form-group">
+                        <input type="text" id="search" placeholder="Search..." class="form-control input-sm">
+                    </div>
+                    <button type="submit" class="btn btn-warning btn-sm">Search</button>
+                </form>
+                {% if user %}
+                    {% include "auth.html" %}
+                {% else %}
+                    {% include "not_auth.html" %}
+                {% endif %}
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+{% endblock %}
 
-	<div class="row" style="padding-top: 50px;">
-		<div class="col-lg-8">
-			<div class="row">
-				<div class="col-lg-5"></div>
-				<div id="content" class="col-lg-7">
-					{% block content %}
-					{% endblock content %}
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4">
-		{% include "right_colum.html" %}
-		</div>
-	</div>
-	{% block  navbarbottom %}
-	<div class="navbar-fixed-bottom navbar-inverse row-fluid">
-		<div class="navbar-inner">
-			<div class="container">
-				<ul class="nav navbar-nav navbar-center">
-					<li class="text-muted">Copyright © 2017 Ask-Ask.com. All Rights Reserved.</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	{% endblock %}
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="./bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+<div class="row" style="padding-top: 50px;">
+    <div class="col-lg-8">
+        <div class="row">
+            <div class="col-lg-5"></div>
+            <div id="content" class="col-lg-7">
+                {% block content %}
+                {% endblock content %}
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        {% include "right_colum.html" %}
+    </div>
+</div>
+{% block  navbarbottom %}
+    <div class="navbar-fixed-bottom navbar-inverse row-fluid">
+        <div class="navbar-inner">
+            <div class="container">
+                <ul class="nav navbar-nav navbar-center">
+                    <li class="text-muted">Copyright © 2017 Ask-Ask.com. All Rights Reserved.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="./bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
 </body>
 </html>
