--- a/templates/ask/login_content.html
+++ b/templates/ask/login_content.html
@@ -1,35 +1,45 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="row">
-	<h1 id="createAccount"> Log In </h1>
-</div>
-<div class="row">
-	<p id="createAccount" class="text-danger"> Sorry, wrong password!</p>
-</div>
-<form class="form-horizontal" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-	<!-- <div class="form-group">
-		<label class="col-sm-2 control-label" for="login">Login </label>
-		<div class="col-sm-10">
-			<input class="form-control" placeholder="Enyer your login here" type="text" name="login" maxlength="100" required />
-		</div>
-	</div>
-	<div class="form-group">
-		<label for="password" class="col-sm-2 control-label">Password</label>
-		<div class="col-sm-10">
-			<input type="password" class="form-control" id="inputPassword3" placeholder="Password" name="password" maxlength="100" required />
-		</div>
-	</div> -->
-	<div class="form-group">
-		<div class="col-sm-offset-2 col-sm-10">
-			<button type="submit" class="btn btn-warning"> Log In! </button>
-		</div>
-	</div>
-</form>
-<div class="row">
-<a id="createAccount" href="{%url 'signup'%}"> create new account</a>
-</div>
+    <div class="row">
+        <h1 id="createAccount"> Log In </h1>
+    </div>
+    <div class="row">
+        <p id="createAccount" class="text-danger"> Sorry, wrong password!</p>
+    </div>
+    <form class="form-horizontal" method="post">
+        {% csrf_token %}
+        {% for field in form %}
+            {% if field.errors %}
+                <div class="control-group error">
+                    <label class="control-label" for="login">{{ field.label }}</label>
+                    <div class="controls">{{ field }}
+                        <span class="help-inline">
+                            {% for error in  field.errors %}{{ error }}{% endfor %}
+                        </span>
+                    </div>
+                </div>
+            {% else %}
+                <div class="form-group">
+                    <label class="col-sm-2 control-label" for="login">{{ field.label }}</label>
+                    <div class="col-sm-10">{{ field }}
+                        {% if field.help_text %}
+                            <p class="help-inline">
+                                <small>{{ field.help_text }}</small>
+                            </p>
+                        {% endif %}
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-warning"> Log In!</button>
+            </div>
+        </div>
+    </form>
+    <div class="row">
+        <a id="createAccount" href="{% url 'signup' %}"> create new account</a>
+    </div>
 {% endblock content %}
 
