--- a/templates/ask/login_content.html
+++ b/templates/ask/login_content.html
@@ -5,9 +5,9 @@
         <h1 id="createAccount"> Log In </h1>
     </div>
     <div class="row">
-    {% if not error_message.empty %}
-        <p id="createAccount" class="text-danger"> {{ error_message }}</p>
-    {% endif %}
+    {% for error in form.non_field_errors %}
+        <p id="createAccount" class="text-danger"> {{ error }}</p>
+    {% endfor %}
     </div>
     <form class="form-horizontal" method="post">
         {% csrf_token %}
