add newQuestion form

--- a/templates/auth.html
+++ b/templates/auth.html
@@ -1,5 +1,6 @@
 <ul class="nav navbar-nav navbar-right">
     <li><a href="{% url 'logout' %}">LogOut</a></li>
+    <li><a href="{% url 'ask' %}">NewQuestion</a></li>
 </ul>
 <img src="/image/face.png" class="img-rounded navbar-right" alt="Cinque Terre" width="50" height="50">
 <ul class="nav navbar-nav navbar-right">
