--- a/templates/ask/ask_content.html
+++ b/templates/ask/ask_content.html
@@ -9,13 +9,13 @@
         <div class="form-group">
             <label class="col-sm-2 control-label">Title</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" name="title" placeholder="How to build a moon park?">
+                <input type="text" class="form-control" name="title" placeholder="How to build a moon park?" value="{{form.cleaned_data.title}}">
             </div>
         </div>
         <div class="form-group">
             <label class="col-sm-2 control-label">Text</label>
             <div class="col-sm-10">
-                <textarea class="form-control" name="text" rows="5" placeholder="Type your answer..."></textarea>
+                <textarea class="form-control" name="text" rows="5" placeholder="Type your answer...">{{form.cleaned_data.text}}</textarea>
             </div>
         </div>
         <div class="form-group">
