--- a/templates/ask/login_content.html
+++ b/templates/ask/login_content.html
@@ -4,31 +4,19 @@
     <div class="row">
         <h1 id="createAccount"> Log In </h1>
     </div>
-    <div class="row">
-    {% for error in form.non_field_errors %}
-        <p id="createAccount" class="text-danger"> {{ error }}</p>
-    {% endfor %}
+    <div class="row"></div>
+    <form method="post">
+    {% csrf_token %}
+        {% for error in form.non_field_errors %}
+            <p id="createAccount" class="text-danger">{{ error }}</p>
+        {% endfor %}
+        {% for item in form %}
+            {{ item.label_tag }}{{ item }}
+        {% endfor %}
+    <div class="form-group">
+        <hr>
+            <button type="submit" class="btn btn-warning"> Log In!</button>
     </div>
-    <form class="form-horizontal" method="post">
-        {% csrf_token %}
-         <div class="form-group">
-            <label class="col-sm-2 control-label">login</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="login" placeholder="Enter your login here...">
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
-                <input type="password"
-                       class="form-control" name="password" placeholder="Enter your password here...">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-warning"> Log In!</button>
-            </div>
-        </div>
     </form>
     <div class="row">
         <a id="createAccount" href="{% url 'signup' %}"> create new account</a>
