--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
     <title>Bootstrap 101 Template</title>
 
     <!-- Bootstrap -->
-    <link href="/bootstrap-3.3.2-dist/css/bootstrap.css" rel="stylesheet">
-    <link href="/bootstrap-3.3.2-dist/css/style.css" rel="stylesheet">
+    {% load staticfiles %}
+	<link href="{% static "/bootstrap-3.3.2-dist/css/bootstrap.css" %}" rel="stylesheet">
+	<link href="{% static "/bootstrap-3.3.2-dist/css/style.css" %}" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
 
 </head>
@@ -64,6 +65,6 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="./bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+<script src="{% static "/bootstrap-3.3.2-dist/js/bootstrap.min.js" %}"></script>
 </body>
 </html>
